docs/website/content/docs/v0.7.0/sdk/api/ragReindex.mdx
---
title: "ragReindex( )"
titleStyle: code
description: Reindexes the RAG database to optimize search performance.
schemaType: APIReference
---

```ts
function ragReindex(params): Promise<RagReindexResult>;
```

For HyperDB, rebalances centroids using k-means clustering. Requires a minimum number of documents (16 by default).

## Parameters

| Name | Type | Required? | Default | Description |
| --- | --- | :---: | --- | --- |
| params.modelId | `string` | ✗ | — | Embedding model ID (required if no cached RAG instance) |
| params.workspace | `string` | ✗ | `"default"` | Workspace to reindex. Must already exist. |
| params.onProgress | `(stage, current, total) => void` | ✗ | — | Progress callback |

## Returns

| Field | Type | Description |
| --- | --- | --- |
| reindexed | `boolean` | Whether reindexing was performed |
| details | `Record<string, unknown>` | Additional details (e.g., reason if skipped) — optional |

## Throws

| Error | When |
| --- | --- |
| `RAG_SAVE_FAILED` | The reindex operation fails or workspace doesn't exist |
| `STREAM_ENDED_WITHOUT_RESPONSE` | Streaming ends unexpectedly (when using `onProgress`) |

## Example

```typescript
const result = await ragReindex({ workspace: "my-docs" });

if (!result.reindexed) {
  console.log("Reindex skipped:", result.details?.reason);
}
```
